fix layout issues on whatsnew page (bug 647686)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@87454 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/firefox/4/firstrun-page.css
+++ b/style/firefox/4/firstrun-page.css
@@ -309,11 +309,12 @@ h2 b {
 }
 #newsletter-signup .title h3 {
     cursor: pointer;
+    height: auto;
 }
 #newsletter-signup .title {
     display: inline-block;
-    height: 40px;
-    width: 165px;
+    width: 175px;
+    min-height: 40px;
     padding: 7px 14px 0 70px;
     background: -moz-image-rect(url(/img/firefox/4.0/firstrun/firstrun_sprite.png), 0, 123, 37, 69) no-repeat;
 }
@@ -345,7 +346,7 @@ h2 b {
     vertical-align: top;
 }
 #newsletter-signup form select {
-    width: 23em;
+    width: 240px;
 }
 #email {
     font-family: Georgia, serif;
